--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=us-cdbr-east-02.cleardb.com
 DB_PORT=3306
 DB_DATABASE=heroku_614815fa6e21b0b
 DB_USERNAME=b792ea10632f16
