--- a/.env
+++ b/.env
@@ -45,5 +45,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-L5_SWAGGER_CONST_HOST=http://127.0.0.1:8000
+L5_SWAGGER_CONST_HOST=http://ltud-csdl.herokuapp.com/
 L5_SWAGGER_GENERATE_ALWAYS=true
