--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-east-02.cleardb.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=heroku_614815fa6e21b0b
-DB_USERNAME=b792ea10632f16
-DB_PASSWORD=40fae151
+DB_DATABASE=larapi
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
