--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
-        Options +FollowSymLinks -MultiViews -Indexes
+        Options -MultiViews -Indexes
     </IfModule>
 
     RewriteEngine On
