--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:sgKacXd5kvoDujrZuJkSnhqgt0O00LODlmqmvqZHJMs=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=us-cdbr-east-02.cleardb.com
 DB_PORT=3306
-DB_DATABASE=larapi
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_614815fa6e21b0b
+DB_USERNAME=b792ea10632f16
+DB_PASSWORD=40fae151
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -45,5 +45,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-L5_SWAGGER_CONST_HOST=http://127.0.0.1:8000
+L5_SWAGGER_CONST_HOST=https://ltud-csdl.herokuapp.com/
 L5_SWAGGER_GENERATE_ALWAYS=true
