--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "darkaonline/l5-swagger": "^7.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
+        "fzaninotto/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/sanctum": "^2.4",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1",
-        "fzaninotto/faker": "^1.9.1"
+        "laravel/ui": "^2.1"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
