--- a/.env
+++ b/.env
@@ -1,10 +1,18 @@
 APP_NAME=Laravel
+# APP_ENV=local
 APP_ENV=production
 APP_KEY=base64:sgKacXd5kvoDujrZuJkSnhqgt0O00LODlmqmvqZHJMs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
+
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=larapi
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 DB_CONNECTION=mysql
 DB_HOST=us-cdbr-east-02.cleardb.com
@@ -23,14 +31,18 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=mailgun
+# MAIL_HOST=smtp.mailgun.org
+# MAIL_PORT=587
+# MAIL_USERNAME=postmaster@sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
+# MAIL_PASSWORD=340f13971e420ff49921b1c02eff9656-07e45e2a-49cf8926
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS=null
+# MAIL_FROM_NAME="${APP_NAME}"
+
+MAILGUN_DOMAIN=sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
+MAILGUN_SECRET=c026aa33a3aa3807b89a6fe91495f6cf-07e45e2a-4389349b
+#MAILGUN_ENDPOINT=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -45,5 +57,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# L5_SWAGGER_CONST_HOST=http://localhost:8000/
 L5_SWAGGER_CONST_HOST=https://ltud-csdl.herokuapp.com/
 L5_SWAGGER_GENERATE_ALWAYS=true
