--- a/.env
+++ b/.env
@@ -31,17 +31,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=mailgun
-# MAIL_HOST=smtp.mailgun.org
-# MAIL_PORT=587
-# MAIL_USERNAME=postmaster@sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
-# MAIL_PASSWORD=340f13971e420ff49921b1c02eff9656-07e45e2a-49cf8926
-# MAIL_ENCRYPTION=tls
-# MAIL_FROM_ADDRESS=null
-# MAIL_FROM_NAME="${APP_NAME}"
+# MAIL_MAILER=mailgun
+#MAIL_HOST=smtp.mailgun.org
+#MAIL_PORT=587
+#MAIL_USERNAME=postmaster@sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
+#MAIL_PASSWORD=340f13971e420ff49921b1c02eff9656-07e45e2a-49cf8926
+#MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=null
+#MAIL_FROM_NAME="${APP_NAME}"
 
-MAILGUN_DOMAIN=sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
-MAILGUN_SECRET=c026aa33a3aa3807b89a6fe91495f6cf-07e45e2a-4389349b
+# MAILGUN_DOMAIN=sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
+# MAILGUN_SECRET=c026aa33a3aa3807b89a6fe91495f6cf-07e45e2a-4389349b
 #MAILGUN_ENDPOINT=
 
 AWS_ACCESS_KEY_ID=
