--- a/.env
+++ b/.env
@@ -1,25 +1,25 @@
 APP_NAME=Laravel
-# APP_ENV=local
-APP_ENV=production
+APP_ENV=local
+#APP_ENV=production
 APP_KEY=base64:sgKacXd5kvoDujrZuJkSnhqgt0O00LODlmqmvqZHJMs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-# DB_CONNECTION=mysql
-# DB_HOST=localhost
-# DB_PORT=3306
-# DB_DATABASE=larapi
-# DB_USERNAME=root
-# DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=us-cdbr-east-02.cleardb.com
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=heroku_614815fa6e21b0b
-DB_USERNAME=b792ea10632f16
-DB_PASSWORD=40fae151
+DB_DATABASE=larapi
+DB_USERNAME=root
+DB_PASSWORD=
+
+#DB_CONNECTION=mysql
+#DB_HOST=us-cdbr-east-02.cleardb.com
+#DB_PORT=3306
+#DB_DATABASE=heroku_614815fa6e21b0b
+#DB_USERNAME=b792ea10632f16
+#DB_PASSWORD=40fae151
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -31,7 +31,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-# MAIL_MAILER=mailgun
+MAIL_MAILER=mailgun
 #MAIL_HOST=smtp.mailgun.org
 #MAIL_PORT=587
 #MAIL_USERNAME=postmaster@sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
@@ -40,9 +40,8 @@ REDIS_PORT=6379
 #MAIL_FROM_ADDRESS=null
 #MAIL_FROM_NAME="${APP_NAME}"
 
-# MAILGUN_DOMAIN=sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
-# MAILGUN_SECRET=c026aa33a3aa3807b89a6fe91495f6cf-07e45e2a-4389349b
-#MAILGUN_ENDPOINT=
+MAILGUN_DOMAIN=sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -57,6 +56,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# L5_SWAGGER_CONST_HOST=http://localhost:8000/
-L5_SWAGGER_CONST_HOST=https://ltud-csdl.herokuapp.com/
+L5_SWAGGER_CONST_HOST=http://localhost:8000/
+#L5_SWAGGER_CONST_HOST=https://ltud-csdl.herokuapp.com/
 L5_SWAGGER_GENERATE_ALWAYS=true
