--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 APP_NAME=Laravel
-APP_ENV=local
-#APP_ENV=production
-APP_KEY=base64:sgKacXd5kvoDujrZuJkSnhqgt0O00LODlmqmvqZHJMs=
+# APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -40,7 +39,6 @@ MAIL_MAILER=mailgun
 #MAIL_FROM_ADDRESS=null
 #MAIL_FROM_NAME="${APP_NAME}"
 
-MAILGUN_DOMAIN=sandboxf91aee5ba2c040daaf7d379fbf21710e.mailgun.org
 
 
 AWS_ACCESS_KEY_ID=
@@ -56,6 +54,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-L5_SWAGGER_CONST_HOST=http://localhost:8000/
-#L5_SWAGGER_CONST_HOST=https://ltud-csdl.herokuapp.com/
+# L5_SWAGGER_CONST_HOST=http://localhost:8000/
+L5_SWAGGER_CONST_HOST=https://ltud-csdl.herokuapp.com/
 L5_SWAGGER_GENERATE_ALWAYS=true
