--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 APP_NAME=Laravel
+APP_KEY=base64:sgKacXd5kvoDujrZuJkSnhqgt0O00LODlmqmvqZHJMs=
 # APP_ENV=local
 APP_ENV=production
 APP_DEBUG=true
@@ -29,6 +30,16 @@ SESSION_LIFETIME=120
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.zoho.com
+MAIL_PORT=465 
+MAIL_USERNAME=hdpro1997
+MAIL_PASSWORD=hunter30197
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=hdpro1997@zohomail.com
+MAIL_FROM_NAME="Test Mail"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
